Implement the PKCE protocol and integrate with PixivClient (#4)